# GoPiGo4

./: .gitignore  README.md
blacknav_grg/: Dockerfile  entrypoint.sh
blacknav_grg/arm64realsense_files/librealsense/lib/cmake/pyrealsense2/: pyrealsense2Config.cmake  pyrealsense2Targets-release.cmake  pyrealsense2Targets.cmake
blacknav_grg/arm64realsense_files/librealsense/lib/cmake/realsense2/: realsense2Targets.cmake
blacknav_grg/arm64realsense_files/librealsense/lib/pkgconfig/: realsense2.pc
blacknav_grg/blacknav/: CMakeLists.txt  compile_commands.json  package.xml
blacknav_grg/blacknav/assets/: caster_holder.part  caster_wheel.stl  left_wheel.part  left_wheel.stl  realsense_tripod.stl  right_wheel.stl  wheel_joints.part  wheel_joints.stl
blacknav_grg/blacknav/install/: local_setup.sh  setup.sh
blacknav_grg/blacknav/install/blacknav/share/ament_index/resource_index/parent_prefix_path/: blacknav
blacknav_grg/blacknav/install/blacknav/share/blacknav/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
blacknav_grg/blacknav/install/blacknav/share/blacknav/assets/: caster_holder.stl  caster_wheel.part  main_body.part  main_body.stl  realsense_tripod.part  right_wheel.part
blacknav_grg/blacknav/install/blacknav/share/blacknav/cmake/: blacknavConfig.cmake
blacknav_grg/blacknav/launch/: blacknav_launch.py
blacknav_grg/blacknav/src/: motor_controller.cpp  odom_pub.cpp
blacknav_grg/blacknav/urdf/: gopigo.urdf
